# scrapetools

./: .gitignore  CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml
docs/: email_scraper.html  index.html  input_scraper.html  link_scraper.html  phone_scraper.html  scrapetools.html  search.js
docs/scrapetools/: email_scraper.html  input_scraper.html  link_scraper.html  phone_scraper.html
src/scrapetools/: __init__.py  email_scraper.py  input_scraper.py  link_scraper.py  phone_scraper.py
tests/: test_scrapetools.py
